[gd_scene load_steps=2 format=3 uid="uid://dss3qxvysd0bn"]

[ext_resource type="Script" path="res://scripts/upgrade_menu.gd" id="1_3ql8v"]

[node name="UpgradeMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_3ql8v")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -363.0
offset_top = -229.0
offset_right = 408.0
offset_bottom = 193.0
grow_horizontal = 2
grow_vertical = 2

[node name="Description" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -13.5
offset_top = 61.0
offset_right = 30.5
offset_bottom = 86.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 3

[node name="Label" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 256.0
offset_top = 71.0
offset_right = 502.0
offset_bottom = 95.0
text = "Level Up! Choose your upgrade!"
horizontal_alignment = 1

[node name="BoxContainer" type="BoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 196.0
offset_top = 151.0
offset_right = 394.0
offset_bottom = 231.0

[node name="UpgradeButton1" type="Button" parent="Panel/BoxContainer"]
layout_mode = 2
icon_alignment = 1

[node name="UpgradeButton2" type="Button" parent="Panel/BoxContainer"]
layout_mode = 2
icon_alignment = 1

[node name="UpgradeButton3" type="Button" parent="Panel/BoxContainer"]
layout_mode = 2
icon_alignment = 1
